--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -20,7 +20,7 @@
     "description": "Метка для флажка списка входящих."
   },
   "inboxListDescription": {
-    "message": "Включите эту опцию, чтобы показывать изображения профиля в списке входящих.",
+    "message": "Включите эту опцию, чтобы показывать изображения профиля в списке входящих. (только для Thunderbird 121+)",
     "description": "Описание функции списка входящих."
   },
   "inboxListWarning": {
